[package]
name = "kv_distributed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52.4", features = [
    "tcp",
    "dns",
    "async-std",
    "noise",
    "yamux",
    "websocket",
    "ping",
    "macros",
    "kad",
    "mdns",
] }
futures = "0.3"
env_logger = "0.10.0"
async-std = { version = "1.12", features = ["attributes"] }
libp2p-identity = "0.2.7"
